# chat-bot-pro-v2

./: README.md  docker-compose.yml
ai_worker/: Dockerfile  requirements.txt
ai_worker/app/: main.py
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_2fa.sql  0003_device_idx.sql  0004_email_verification.sql  0005_password_reset.sql
backend/src/: auth.rs  db.rs  keys.rs  main.rs  rate_limit.rs
backend/tests/: auth_flow.rs
docs/: ARCHITECTURE.md
frontend/: package.json
frontend/src/components/: ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
nginx/: nginx.conf
prometheus/: prometheus.yml
