[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "macros"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
anyhow = "1.0" 
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std", "rngs"] }
jsonwebtoken = { version = "9", default-features = false, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] } 
oath = "0.14"
data-encoding = "2.5"
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["typed-header"] } 
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
once_cell = "1.19" 
governor = { version = "0.6", features = ["dashmap", "std"] }
tower-http = { version = "0.5", features = ["timeout"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] } 